--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-background-color: 
+    margin: 0;
 }
 
 header{
@@ -7,6 +7,74 @@ display: flex;
 justify-content: space-between;
 }
 
-/* h3{
+.home{
+    background-color: #F7EEDD;
+}
+.homet{
+    background-color: #97CDBB;
+}
 
-} */
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    background-color: #97CDBB;
+    color: rgb(0, 0, 0);
+    text-align: center;
+ }
+
+.abtt {
+    background-color: #9FDEDD;
+}
+.resumet{
+
+}
+
+
+
+
+
+
+.button-92 {
+  --c: #fff;
+  
+  background: linear-gradient(90deg, #0000 33%, #fff5, #0000 67%) var(--_p,100%)/300% no-repeat,
+    #004dff;
+  
+  color: #0000;
+  border: none;
+  transform: perspective(500px) rotateY(calc(20deg*var(--_i,-1)));
+  text-shadow: calc(var(--_i,-1)* 0.08em) -.01em 0   var(--c),
+    calc(var(--_i,-1)*-0.08em)  .01em 2px #0004;
+  outline-offset: .1em;
+  transition: 0.3s;
+}
+
+.button-92 > span {
+    position: relative;
+    top:35%;
+    height: 1em;
+}
+
+.button-92:hover,
+.button-92:focus-visible {
+  --_p: 0%;
+  --_i: 1;
+}
+
+.button-92:active {
+  text-shadow: none;
+  color: var(--c);
+  box-shadow: inset 0 0 9e9q #0005;
+  transition: 0s;
+}
+
+.button-92 {
+  font-weight: bold;
+  font-size: 2rem;
+  margin: 0;
+  cursor: pointer;
+  padding: .1em .3em;
+  text-decoration: none;
+
+}
