--- a/style.css
+++ b/style.css
@@ -27,12 +27,20 @@ footer {
     background-color: #9FDEDD;
 }
 .resumet{
-
+  background-color: #97CDBB;
 }
-
-
-
-
+.academicst{
+  background-color: #9FDEDD;
+}
+.contactst{
+  background-color: #9FDEDD;
+}
+.contentt{
+  background-color: #9FDEDD;
+}
+.moret{
+  background-color: #9FDEDD;
+}
 
 
 .button-92 {
