--- a/style.css
+++ b/style.css
@@ -5,13 +5,15 @@ body{
 header{
 display: flex;
 justify-content: space-between;
+height: 10vh;
 }
 
 .home{
     background-color: #F7EEDD;
 }
 .homet{
-    background-color: #97CDBB;
+    background-color: #9FDEDD;
+
 }
 
 footer {
@@ -24,10 +26,10 @@ footer {
  }
 
 .abtt {
-    background-color: #9FDEDD;
+  background-color: #9FDEDD;
 }
 .resumet{
-  background-color: #97CDBB;
+  background-color: #9FDEDD;
 }
 .academicst{
   background-color: #9FDEDD;
@@ -41,19 +43,33 @@ footer {
 .moret{
   background-color: #9FDEDD;
 }
-
+.bign{
+  font-size: 64px;
+ 
+  font-family: "Ultra", serif;
+  font-weight: 400;
+  font-style: normal;
+  color: saddlebrown
+}
+.aren{
+  width: 17vw;
+  height: 50vh;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+}
 
 .button-92 {
-  --c: #fff;
+  --c: #349391;
   
-  background: linear-gradient(90deg, #0000 33%, #fff5, #0000 67%) var(--_p,100%)/300% no-repeat,
-    #004dff;
+  background: linear-gradient(90deg, #00000000 33%, #fff5, #0000 67%) var(--_p,100%)/300% no-repeat,
+  #dfd2b9;
   
-  color: #0000;
+  color: #00000000;
   border: none;
   transform: perspective(500px) rotateY(calc(20deg*var(--_i,-1)));
   text-shadow: calc(var(--_i,-1)* 0.08em) -.01em 0   var(--c),
-    calc(var(--_i,-1)*-0.08em)  .01em 2px #0004;
+    0  0 0 rgba(62, 30, 30, 0.496);
   outline-offset: .1em;
   transition: 0.3s;
 }
@@ -73,7 +89,7 @@ footer {
 .button-92:active {
   text-shadow: none;
   color: var(--c);
-  box-shadow: inset 0 0 9e9q #0005;
+  box-shadow: inset 0 0 9e9q rgba(0, 0, 0, 0.333);
   transition: 0s;
 }
 
