--- a/style.css
+++ b/style.css
@@ -23,8 +23,17 @@ footer {
     background-color: #97CDBB;
     color: rgb(0, 0, 0);
     text-align: center;
+    font-family: "Ultra", serif;
+    font-weight: 400;
+    font-style: normal;
+    color: saddlebrown
+    
  }
-
+.hm{
+  justify-content: center;
+  justify-items: center;
+  display: grid;
+}
 .abtt {
   background-color: #9FDEDD;
 }
