increse the leng

--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ height: 10vh;
 
 }
 
+.texth{
+  display: flex;
+  justify-content: flex-start;
+}
+
 footer {
     position: fixed;
     bottom: 0;
