--- a/style.css
+++ b/style.css
@@ -35,6 +35,20 @@ footer {
     
  }
 
+.some{
+  display: flex;
+  flex-direction: column;
+}
+
+.some1{
+  display: flex;
+  flex-direction: column;
+}
+
+.some2{
+  display: flex;
+  flex-direction: column;
+}
 .abtt {
   background-color: #9FDEDD;
 }
@@ -80,8 +94,8 @@ footer {
   flex-direction: row-reverse;
 }
 
-.textht{
-  
+.C{
+  display: flex
 }
 
 img {
@@ -132,4 +146,11 @@ img {
 
 }
 
-
+.resume {
+  display: flex;
+  justify-content: center;
+}
+.content {
+  display: flex;
+  align-items: center;
+}
